--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
             </div>
         </section>
 
+        <!-- Login Section -->
+        <div class="login-container">
+            <h2>Login</h2>
+            <input type="text" placeholder="Username">
+            <input type="password" placeholder="Password">
+            <button class="login-button">Login</button>
+        </div>
+
         <!-- Footer Section -->
         <footer>
             <p>&copy; 2024 Meriba Springs Hardware. All rights reserved.</p>
@@ -123,24 +131,7 @@
             </div>
         </footer>
 
-        <!-- Login Section -->
-        <section id="login" class="login-section">
-            <div class="login-container">
-                <h2>Login</h2>
-                <form id="login-form" method="POST" aria-labelledby="login-heading">
-                    <div class="form-group">
-                        <label for="username" aria-required="true">Username</label>
-                        <input type="text" id="username" name="username" placeholder="Enter your username" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="password" aria-required="true">Password</label>
-                        <input type="password" id="password" name="password" placeholder="Enter your password" required>
-                    </div>
-                    <button type="submit" class="submit-button">Login</button>
-                </form>
-                <p id="login-message" class="login-message"></p>
-            </div>
-        </section>
+        
     </main>
 
     <!-- External Scripts -->
