--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
     </div>
 </header>
 
+<!-- Menu Section -->
+<div class="menu">
+    <button onclick="toggleLogin()">Login</button>
+</div>
+
+<!-- Login Form Section -->
+<div class="login-container" id="loginContainer">
+    <h2>Login</h2>
+    <input type="text" placeholder="Username">
+    <input type="password" placeholder="Password">
+    <button class="login-button">Login</button>
+</div>
+
 
 
     <!-- Main Content Section -->
@@ -102,13 +115,7 @@
             </div>
         </section>
 
-        <!-- Login Section -->
-        <div class="login-container">
-            <h2>Login</h2>
-            <input type="text" placeholder="Username">
-            <input type="password" placeholder="Password">
-            <button class="login-button">Login</button>
-        </div>
+        
 
         <!-- Footer Section -->
         <footer>
