--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Meriba Springs Hardware</title>
     <meta name="description" content="Meriba Springs Hardware offers top-quality construction materials and exceptional service. Explore our range of products and get everything you need for your next project.">
     <link rel="stylesheet" href="styles.css" onerror="alert('WELCOME TO MERIBA SPRINGS Hardware.')">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"  rel="stylesheet">
+
 </head>
 <body>
     
